--- a/uh/play/skor.html
+++ b/uh/play/skor.html
@@ -42,7 +42,7 @@
 
 <script>
 const ADMIN_PASSWORD = "12345"; // ganti sesuai kebutuhan
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxxxxxx/exec"; // ganti dengan URL WebApp Anda
+const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec"; // ganti dengan URL WebApp Anda
 
 let hasil = [];
 let mapelAktif = [];
