--- a/uh/play/siswa.html
+++ b/uh/play/siswa.html
@@ -11,6 +11,7 @@
 .kop h2,h4,p{margin:0;line-height:1.4;}
 .question-box{padding:15px;border:1px solid #ddd;border-radius:8px;margin-bottom:15px;background:#fff;}
 img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;object-fit:contain;}
+.mapel-disabled { color:#999; font-style:italic; }
 </style>
 </head>
 <body class="bg-light">
@@ -33,13 +34,11 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
   <h5>📌 Petunjuk Pengerjaan:</h5>
   <ul>
     <li>Pilih nama lengkap sebelum memulai.</li>
-    <li>Pilih mata pelajaran yang akan dikerjakan.</li>
-    <li>Baca dan pahami soal dengan cermat dan teliti.</li>
-    <li>Pilihlah jawaban dengan menekan opsi check box.</li>
-    <li>Silahkan bertanya kepada guru, jika soal kurang jelas.</li>
+    <li>Pilih mata pelajaran yang aktif untuk dikerjakan.</li>
+    <li>Mapel nonaktif akan berwarna redup dan tidak bisa dipilih.</li>
+    <li>Baca dan pahami soal dengan cermat.</li>
     <li>Kerjakan dengan jujur tanpa bantuan orang lain.</li>
-    <li>Setiap mata pelajaran hanya bisa dikerjakan <b>1 kali</b>.</li>
-    <li>Jika sudah selesai, hasil langsung tersimpan otomatis.</li>
+    <li>Setiap mapel hanya bisa dikerjakan <b>1 kali</b>.</li>
   </ul>
 </div>
 
@@ -60,11 +59,6 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
     <label>Mata Pelajaran</label>
     <select id="subjectSelect" class="form-select">
       <option value="">-- Pilih Pelajaran --</option>
-      <option>Pendidikan Pancasila</option>
-      <option>Bahasa Indonesia</option>
-      <option>Matematika</option>
-      <option>IPAS</option>
-      <option>Seni Rupa</option>
     </select>
   </div>
   <button class="btn btn-primary mb-3" onclick="loadQuestions()">Mulai</button>
@@ -83,8 +77,13 @@ let soal = {};
 let currentName = "";
 const soalURL = "https://oneon360.github.io/web/uh/soal.json";
 const siswaURL = "https://oneon360.github.io/web/uh/play/nama.json";
+
 // Ganti dengan URL Web App Anda
 const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec";
+
+// Daftar semua mapel
+const ALL_MAPEL = ["Pendidikan Pancasila","Bahasa Indonesia","Matematika","IPAS","Seni Rupa"];
+let aktifMapel = [];
 
 // Ambil daftar siswa
 async function fetchSiswa(){
@@ -101,6 +100,40 @@ async function fetchSiswa(){
   }catch(e){ console.error(e); }
 }
 fetchSiswa();
+
+// Ambil daftar mapel aktif dari Apps Script
+async function fetchMapel(){
+  try {
+    const res = await fetch(WEB_APP_URL+"?action=mapel");
+    const data = await res.json();
+    if(data.status==="success"){
+      aktifMapel = data.aktif || [];
+      renderMapelOptions();
+    } else {
+      alert("Gagal ambil mapel: " + data.message);
+    }
+  } catch(err){
+    console.error(err);
+  }
+}
+fetchMapel();
+
+// Render opsi mapel sesuai aktif/nonaktif
+function renderMapelOptions(){
+  const sel = document.getElementById("subjectSelect");
+  sel.innerHTML = "<option value=''>-- Pilih Pelajaran --</option>";
+  ALL_MAPEL.forEach(m=>{
+    let opt = document.createElement("option");
+    opt.value = m;
+    opt.textContent = m;
+    if(!aktifMapel.includes(m)){
+      opt.disabled = true;
+      opt.classList.add("mapel-disabled");
+      opt.textContent = m + " (nonaktif)";
+    }
+    sel.appendChild(opt);
+  });
+}
 
 // Saat pilih nama
 document.getElementById("studentName").addEventListener("change", ()=>{
@@ -142,7 +175,7 @@ async function loadQuestions(){
   try{
     let cek = await fetch(WEB_APP_URL+"?action=cek&nama="+encodeURIComponent(currentName)+"&mapel="+encodeURIComponent(subject));
     let res = await cek.json();
-    if(res.status==="used"){
+    if(res.sudah){
       alert("⚠️ Nama "+currentName+" sudah mengerjakan "+subject+". Hubungi guru untuk reset.");
       return;
     }
@@ -182,73 +215,42 @@ async function submitAnswers(){
 
   if(unanswered.length > 0){
     document.getElementById("qbox"+unanswered[0]).scrollIntoView({behavior:"smooth", block:"center"});
-    alert("⚠️ Masih ada soal yang belum dijawab! Silakan lengkapi terlebih dahulu.");
+    alert("⚠️ Masih ada soal yang belum dijawab!");
     return;
   }
 
-  // === Konfirmasi dengan hitung mundur 30 detik ===
-  let confirmDiv = document.createElement("div");
-  confirmDiv.className = "alert alert-warning mt-3";
-  let timeLeft = 30;
-  confirmDiv.innerHTML = `
-    <p>⏳ Apakah kamu yakin ingin mengakhiri ulangan? <b>${timeLeft}</b> detik untuk konfirmasi.</p>
-    <button id="btnYes" class="btn btn-danger btn-sm me-2">Ya, saya yakin</button>
-    <button id="btnNo" class="btn btn-secondary btn-sm">Tidak, periksa lagi</button>
-  `;
-  document.getElementById("quizForm").appendChild(confirmDiv);
+  // hitung skor
+  let score = 0;
+  soal[subject].forEach((q,i)=>{
+    let sel = document.querySelector(`input[name="q${i}"]:checked`);
+    if(sel && sel.value.toLowerCase() === q.answer.toLowerCase()) score += 10;
+  });
 
-  let timer = setInterval(()=>{
-    timeLeft--;
-    confirmDiv.querySelector("b").innerText = timeLeft;
-    if(timeLeft <= 0){
-      clearInterval(timer);
-      confirmDiv.remove();
-      alert("❌ Waktu konfirmasi habis, silakan tekan Kumpulkan lagi jika ingin mengakhiri.");
-    }
-  },1000);
+  document.getElementById("result").classList.remove("d-none");
+  document.getElementById("result").innerText = `${currentName} mendapat skor ${score}`;
 
-  confirmDiv.querySelector("#btnYes").onclick = async ()=>{
-    clearInterval(timer);
-    confirmDiv.remove();
-
-    // hitung skor
-    let score = 0;
-    soal[subject].forEach((q,i)=>{
-      let sel = document.querySelector(`input[name="q${i}"]:checked`);
-      if(sel && sel.value.toLowerCase() === q.answer.toLowerCase()) score += 10;
+  // Kirim ke Google Sheets
+  try{
+    let res = await fetch(WEB_APP_URL, {
+      method: "POST",
+      body: JSON.stringify({
+        action:"submit",
+        nama: currentName,
+        mapel: subject,
+        skor: score,
+        tanggal: new Date().toLocaleString()
+      }),
+      headers: {"Content-Type":"application/json"}
     });
-
-    document.getElementById("result").classList.remove("d-none");
-    document.getElementById("result").innerText = `${currentName} mendapat skor ${score}`;
-
-    // Kirim ke Google Sheets via Web App
-    try{
-      let res = await fetch(WEB_APP_URL, {
-        method: "POST",
-        body: JSON.stringify({
-          action:"submit",
-          nama: currentName,
-          mapel: subject,
-          skor: score,
-          tanggal: new Date().toLocaleString()
-        }),
-        headers: {"Content-Type":"application/json"}
-      });
-      let out = await res.json();
-      if(out.status==="error"){
-        alert(out.message);
-      } else {
-        console.log("Data berhasil dikirim ke Google Sheets");
-      }
-    } catch(err){
-      console.error("Gagal kirim data:", err);
+    let out = await res.json();
+    if(out.status==="error"){
+      alert(out.message);
+    } else {
+      console.log("Data berhasil dikirim ke Google Sheets");
     }
-  };
-
-  confirmDiv.querySelector("#btnNo").onclick = ()=>{
-    clearInterval(timer);
-    confirmDiv.remove();
-  };
+  } catch(err){
+    console.error("Gagal kirim data:", err);
+  }
 }
 </script>
 </body>
