--- a/uh/play/skor.html
+++ b/uh/play/skor.html
@@ -18,12 +18,14 @@
   <div class="card p-4 shadow">
     <h4>📊 Rekap Nilai Ulangan</h4>
 
+    <!-- Login Admin -->
     <div id="loginBox" class="mb-3">
       <input type="password" id="adminPass" class="form-control mb-2" placeholder="Password Admin">
       <button class="btn btn-primary" onclick="loginAdmin()">Login</button>
       <div class="small-muted mt-2">Catatan: pastikan Web App Google Apps Script Anda sudah di-deploy sebagai "Anyone, even anonymous".</div>
     </div>
 
+    <!-- Panel Rekap -->
     <div id="rekapPanel" class="d-none">
       <div class="mb-3">
         <button class="btn btn-success" onclick="fetchData()">🔄 Refresh Data</button>
@@ -222,7 +224,6 @@ async function fetchMapel(){
 function renderMapel(){
   const container = document.getElementById("mapelContent");
   container.innerHTML = "";
-  // daftar mapel fix (sinkron dengan siswa.html)
   const semuaMapel = ["Pendidikan Pancasila","Bahasa Indonesia","Matematika","IPAS","Seni Rupa"];
 
   semuaMapel.forEach(m=>{
@@ -240,7 +241,10 @@ async function toggleMapel(mapel){
     const res = await fetch(WEB_APP_URL, {
       method:"POST",
       headers:{"Content-Type":"application/json"},
-      body: JSON.stringify({action:"setMapel", mapel:mapel, aktif:aktif})
+      body: JSON.stringify({
+        action:"updateMapel",
+        mapel:[{nama:mapel, aktif:aktif}]
+      })
     });
     const result = await res.json();
     if(result.status==="success"){
