--- a/uh/play/siswa.html
+++ b/uh/play/siswa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="id">
 <head>
 <meta charset="UTF-8">
@@ -12,6 +12,7 @@
 .question-box{padding:15px;border:1px solid #ddd;border-radius:8px;margin-bottom:15px;background:#fff;}
 img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;object-fit:contain;}
 .mapel-disabled { color:#999; font-style:italic; }
+#confirmEnd { display:none; }
 </style>
 </head>
 <body class="bg-light">
@@ -29,7 +30,6 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
   <p>Tahun Pelajaran 2025</p>
 </div>
 
-<!-- Petunjuk pengerjaan -->
 <div class="alert alert-warning">
   <h5>📌 Petunjuk Pengerjaan:</h5>
   <ul>
@@ -64,8 +64,16 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
 
   <form id="quizForm" class="d-none">
     <div id="questionContainer"></div>
-    <button type="button" class="btn btn-success mt-3" onclick="submitAnswers()">Kumpulkan Jawaban</button>
+    <button type="button" class="btn btn-success mt-3" onclick="prepareSubmit()">Kumpulkan Jawaban</button>
   </form>
+
+  <!-- Konfirmasi akhir ulangan -->
+  <div id="confirmEnd" class="alert alert-danger mt-3">
+    <p>⚠️ Apakah kamu yakin ingin mengakhiri ulangan? Jawaban tidak bisa diubah lagi.</p>
+    <p id="countdown">Waktu konfirmasi: 30 detik</p>
+    <button class="btn btn-danger me-2" id="btnConfirmEnd" onclick="submitAnswers()">Ya, Akhiri</button>
+    <button class="btn btn-secondary" onclick="cancelSubmit()">Batal</button>
+  </div>
 
   <div id="result" class="alert alert-info mt-3 d-none"></div>
 </div>
@@ -77,14 +85,15 @@ let currentName = "";
 const soalURL = "https://oneon360.github.io/web/uh/soal.json";
 const siswaURL = "https://oneon360.github.io/web/uh/play/nama.json";
 
-// Ganti dengan URL Web App Anda
+// URL Web App
 const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycby52Cz1GFVAlQOH0PsTGaK09eCrv1dS8kkxdWaQD9F2kdDwTUNuLfrePEeybXp55gef/exec";
 
 // Daftar mapel
 const ALL_MAPEL = ["Pendidikan Pancasila","Bahasa Indonesia","Matematika","IPAS","Seni Rupa"];
 let aktifMapel = [];
+let countdownTimer;
 
-// Ambil daftar siswa
+/* --- Ambil daftar siswa --- */
 async function fetchSiswa(){
   try{
     const res = await fetch(siswaURL);
@@ -100,7 +109,7 @@ async function fetchSiswa(){
 }
 fetchSiswa();
 
-// Ambil daftar mapel aktif
+/* --- Ambil daftar mapel aktif --- */
 async function fetchMapel(){
   try {
     const res = await fetch(WEB_APP_URL+"?action=mapel");
@@ -117,7 +126,7 @@ async function fetchMapel(){
 }
 fetchMapel();
 
-// Render mapel aktif & nonaktif
+/* --- Render mapel aktif & nonaktif --- */
 function renderMapelOptions(){
   const sel = document.getElementById("subjectSelect");
   sel.innerHTML = "<option value=''>-- Pilih Pelajaran --</option>";
@@ -134,7 +143,7 @@ function renderMapelOptions(){
   });
 }
 
-// Konfirmasi nama
+/* --- Konfirmasi nama --- */
 document.getElementById("studentName").addEventListener("change", ()=>{
   const val = document.getElementById("studentName").value;
   if(val){
@@ -144,7 +153,6 @@ document.getElementById("studentName").addEventListener("change", ()=>{
     document.getElementById("confirmBox").classList.add("d-none");
   }
 });
-
 function confirmYes(){
   currentName = document.getElementById("studentName").value;
   document.getElementById("confirmBox").classList.add("d-none");
@@ -155,7 +163,7 @@ function confirmNo(){
   document.getElementById("confirmBox").classList.add("d-none");
 }
 
-// Ambil soal
+/* --- Ambil soal --- */
 async function fetchSoal(){
   try{
     const res = await fetch(soalURL);
@@ -166,7 +174,7 @@ async function fetchSoal(){
   }
 }
 
-// Load soal
+/* --- Load soal --- */
 async function loadQuestions(){
   const subject = document.getElementById("subjectSelect").value;
   if(!subject || !currentName){ alert("Isi nama & pilih mapel!"); return; }
@@ -203,25 +211,44 @@ async function loadQuestions(){
   document.getElementById("quizForm").classList.remove("d-none");
 }
 
-// Submit jawaban
-async function submitAnswers(){
+/* --- Persiapan Submit (konfirmasi 30 detik) --- */
+function prepareSubmit(){
   const subject = document.getElementById("subjectSelect").value;
   let unanswered = [];
-  
   soal[subject].forEach((q,i)=>{
     let sel = document.querySelector(`input[name="q${i}"]:checked`);
     if(!sel) unanswered.push(i);
   });
-
   if(unanswered.length > 0){
     document.getElementById("qbox"+unanswered[0]).scrollIntoView({behavior:"smooth", block:"center"});
     alert("⚠️ Masih ada soal yang belum dijawab!");
     return;
   }
+  // tampilkan konfirmasi akhir
+  document.getElementById("confirmEnd").style.display="block";
+  let counter = 30;
+  document.getElementById("countdown").innerText = "Waktu konfirmasi: "+counter+" detik";
+  countdownTimer = setInterval(()=>{
+    counter--;
+    if(counter<=0){
+      clearInterval(countdownTimer);
+      submitAnswers();
+    }else{
+      document.getElementById("countdown").innerText = "Waktu konfirmasi: "+counter+" detik";
+    }
+  },1000);
+}
+function cancelSubmit(){
+  clearInterval(countdownTimer);
+  document.getElementById("confirmEnd").style.display="none";
+}
 
-  if(!confirm("Yakin ingin mengakhiri ulangan?")) return;
+/* --- Submit jawaban --- */
+async function submitAnswers(){
+  clearInterval(countdownTimer);
+  document.getElementById("confirmEnd").style.display="none";
 
-  // hitung skor
+  const subject = document.getElementById("subjectSelect").value;
   let score = 0;
   soal[subject].forEach((q,i)=>{
     let sel = document.querySelector(`input[name="q${i}"]:checked`);
@@ -231,7 +258,6 @@ async function submitAnswers(){
   document.getElementById("result").classList.remove("d-none");
   document.getElementById("result").innerText = `${currentName} mendapat skor ${score}`;
 
-  // Kirim ke Google Sheets
   try{
     let res = await fetch(WEB_APP_URL, {
       method: "POST",
